--- a/src/project.css
+++ b/src/project.css
@@ -156,6 +156,10 @@ div.projectDisplay1 {
   padding-right: 2%;
 }
 
+.projectListDisplay:last-child {
+  border-bottom:none;
+}
+
 .projectColumn {
   display: flex;
   flex-direction: row;
@@ -168,7 +172,7 @@ div.projectDisplay1 {
 .mobileExpandContentDescription {
   width: 80%;
   font-size: 16px;
-  margin-left: 2%;
+  margin-left: 1%;
   margin-right: 2%;
   margin-top: 0;
   margin-bottom: 0;
